# card_game

./: CMakeLists.txt  README.md  StaTrebaUraditi.txt
lib/: libSDL3_image.so.0  libSDL3_image.so.0.2.1  libSDL3_ttf.so.0  libSDL3_ttf.so.0.1.2  showanim  showimage
pch/: pch.h
src/: card.c  card.h  connecting.c  connecting.h  connection.c  connection.h  font.c  font.h  game.c  game.h  main.c  menu.c  menu.h
